# zip2zip-compression

./: .pre-commit-config.yaml  Cargo.toml  README.md  compression.pyi  pyproject.toml  zip2zip_compression.pyi
.github/workflows/: release-wheels.yml  test-on-dev.yml
docs/: algorithm.md  debug.md
example/: run_lzw.py
src/: codec.rs  compressor.rs  config.rs  lib.rs  main.rs  manager.rs
tests/: long_test_with_corpus.py  test.py  test.rs  test_compression.py  test_long_with_corpus.py  utils.rs
