[package]
name = "zip2zip_compression"
version = "0.3.2"
edition = "2021"

[lib]
name = "zip2zip_compression"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zip2zip_compression_cli"
path = "src/main.rs"

[dependencies]
bumpalo = { version = "3.19.0", features = ["collections"] }
hashbrown = "0.15.4"
itertools = "0.14.0"
pyo3 = { version = "0.24.2", features = ["extension-module", "hashbrown", "py-clone"] }
rand = "0.9"
rayon = "1.10.0"
clap = { version = "4", features = ["derive"] } # CLI argument parsing
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
hf-hub = "0.4.3"
tqdm = "0.8.0"

[profile.release]
debug = true
